# internal/domain/projections/file-entity/view.go
@@ -3,3 +3,8 @@ package fileview
 import "hermes-relay/internal/domain/entities/file"
 
 type File = file.File
+
+// FileSummary contains file metadata without chunks
+type FileSummary struct {
+	file.BaseFile
+}
